# EstrusVision

./: .gitignore  Dockerfile  MIGRATION.md  QUICKREF.md  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
src/: config.py
src/api/: images.py  main.py
src/database/: __init__.py  db.py  models.py
src/handlers/: __init__.py  telegram_handlers.py
src/prompts/: __init__.py  vlm_prompts.py
src/services/: __init__.py  business_logic.py  telegram_file.py  vlm_service.py
src/utils/: __init__.py  i18n.py  logger.py  rate_limiter.py  session_manager.py
