[project]
name = "swine-estrus-bot"
version = "0.1.0"
description = "Swine Estrus Detection Telegram Bot powered by Gemini Vision"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
dependencies = [
    "python-telegram-bot[job-queue]>=21.6",
    "google-genai>=0.3.0",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
    "SQLAlchemy>=2.0.36",
    "Pillow>=11.0.0",
    "tzdata>=2026.2",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.uv]
# uv settings
package = false  # ไม่ต้อง build เป็น package (เป็น app)

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP"]
ignore = ["E501"]  # ปล่อยให้ formatter จัดการ
